[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/ActionSliders/ActionSlider.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/ActionSliders/AddSliderButton.png" type="Texture" id=2]
[ext_resource path="res://UI/ActionSliders/UIActionSliderDock.gd" type="Script" id=3]
[ext_resource path="res://UI/ActionSliders/SyncTimerPointer.png" type="Texture" id=4]
[ext_resource path="res://UI/ActionSliders/RemoveSliderButton.png" type="Texture" id=5]

[node name="ActionSliderDock" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.00012207
margin_bottom = -1048.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.407843, 0.407843, 0.407843, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddSliderButton" type="TextureButton" parent="HBoxContainer"]
margin_right = 32.0
margin_bottom = 40.0
texture_normal = ExtResource( 2 )

[node name="SliderQtyLabel" type="Label" parent="HBoxContainer"]
margin_left = 36.0
margin_top = 13.0
margin_right = 44.0
margin_bottom = 27.0
text = "1"

[node name="RemoveSliderButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 48.0
margin_right = 80.0
margin_bottom = 40.0
texture_normal = ExtResource( 5 )

[node name="ActionSliders" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionSlider" parent="ActionSliders" instance=ExtResource( 1 )]

[node name="SyncTimerPointer" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HBoxContainer/AddSliderButton" to="." method="_on_AddSliderButton_pressed"]
[connection signal="pressed" from="HBoxContainer/RemoveSliderButton" to="." method="_on_RemoveSliderButton_pressed"]
